sun-java6 (6.31-2) unstable; urgency=low

  * Remove obsolete dependency information
  * Remove obsolete Ubuntu rules
  * Standards-Version updated to version 3.9.3

 -- Janusz Dziemidowicz <rraptorr@nails.eu.org>  Mon, 05 Mar 2012 22:54:38 +0000

sun-java6 (6.31-1) unstable; urgency=high

  * Fix lintian source package warnings
  * Update debhelper compatibility level to 6
  * Update java-common dependency to 0.28
  * New upstream release
  * SECURITY UPDATE: multiple upstream vulnerabilities. Upstream fixes:
   - (CVE-2012-0497): unspecified vulnerability fixed in 6u31 (2D)
   - (CVE-2012-0498): unspecified vulnerability fixed in 6u31 (2D)
   - (CVE-2012-0499): unspecified vulnerability fixed in 6u31 (2D)
   - (CVE-2012-0500): unspecified vulnerability fixed in 6u31 (Deployment)
   - (CVE-2012-0504): unspecified vulnerability fixed in 6u31 (Install)
   - (CVE-2011-3571): unspecified vulnerability in the Virtual Desktop
	              Infrastructure (Concurrency)
   - (CVE-2012-0503): unspecified vulnerability fixed in 6u31 (I18n)
   - (CVE-2012-0505): unspecified vulnerability fixed in 6u31 (Serialization)
   - (CVE-2012-0502): unspecified vulnerability fixed in 6u31 (AWT)
   - (CVE-2011-3563): unspecified vulnerability fixed in 6u31 (Sound)
   - (CVE-2011-5035): hash table implementations vulnerable to algorithmic
	              complexity attacks (Lightweight HTTP Server)
   - (CVE-2012-0501): unspecified vulnerability fixed in 6u31 (JRE)
   - (CVE-2012-0506): unspecified vulnerability fixed in 6u31 (CORBA)

 -- Janusz Dziemidowicz <rraptorr@nails.eu.org>  Thu, 16 Feb 2012 15:12:50 +0100

sun-java6 (6.30-3) unstable; urgency=low

  * Detect Java version from changelog instead of directory name
  * Set proper (lower) priority for ia32-java-6-sun
  * Update link for JCE Unlimited Strength Jurisdiction Policy Files
  * Add Homepage to control file
  * Update list of common JRE things
  * Replace sun-java6-app.xpm with sun-java6.xpm
